--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "@types/react": "~18.2.79",
     "expo": "~51.0.14",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "^3.0.6",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-fs": "^2.20.0",
+    "react-native-html-to-pdf": "^0.12.0",
+    "react-native-pdf-lib": "^1.0.0",
+    "typescript": "~5.3.3",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
