--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
     "expo": "~51.0.14",
+    "expo-file-system": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.6",
     "react": "18.2.0",
@@ -21,11 +22,13 @@
     "react-native-fs": "^2.20.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-pdf-lib": "^1.0.0",
-    "typescript": "~5.3.3",
-    "expo-file-system": "~17.0.1"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro": "^0.80.9",
+    "metro-config": "^0.80.9",
+    "metro-core": "^0.80.9"
   },
   "private": true
 }
